--- a/di-19-zhang-database/di-19.1-jie-postgresql.md
+++ b/di-19-zhang-database/di-19.1-jie-postgresql.md
@@ -7,121 +7,127 @@ PostgreSQL 是一款自由的对象关系型数据库（Object-Relational Databa
 
 ## 安装 PostgreSQL
 
+以 PostgreSQL 17 为例，其余版本大同小异。
+
 ```sh
-# pkg install -y postgresql16-server
+# pkg install -y postgresql17-server
 ```
 
 或者
 
 ```sh
-# cd /usr/ports/databases/postgresql16-server/ 
+# cd /usr/ports/databases/postgresql17-server/ 
 # make install clean
 ```
 
 查看安装后配置
 
 ```sh
-For procedural languages and postgresql functions, please note that
-you might have to update them when updating the server.
-# 如果你使用了过程语言或 PostgreSQL 函数，更新服务器时可能也需要同步更新它们。
+# pkg info -D postgresql17-server
+postgresql17-server-17.5:
+On install:
+安装时说明：
+For procedural languages and postgresql functions, please note that  
+对于过程语言（procedural languages）和 PostgreSQL 函数，请注意  
+you might have to update them when updating the server.  
+在更新服务器时你可能需要更新它们。  
 
-If you have many tables and many clients running, consider raising
-kern.maxfiles using sysctl(8), or reconfigure your kernel
-appropriately.
-# 如果你有大量表和客户端，建议使用 sysctl 提升 kern.maxfiles，或者重新配置内核参数。
+If you have many tables and many clients running, consider raising  
+如果你有大量表和大量客户端在运行，考虑提高  
+kern.maxfiles using sysctl(8), or reconfigure your kernel  
+通过 sysctl(8) 设置 kern.maxfiles，或者重新配置你的内核  
+appropriately.  
+以做出相应调整。  
 
-The port is set up to use autovacuum for new databases, but you might
-also want to vacuum and perhaps backup your database regularly. There
-is a periodic script, /usr/local/etc/periodic/daily/502.pgsql, that
-you may find useful. You can use it to backup and perform vacuum on all
-databases nightly. Per default, it performs `vacuum analyze'. See the
-script for instructions. For autovacuum settings, please review
-~postgres/data/postgresql.conf.
-# 端口默认对新数据库启用了 autovacuum，但你仍然应该定期手动 vacuum 和备份。
-# 有一个每日脚本 /usr/local/etc/periodic/daily/502.pgsql 可以用来每晚备份和 vacuum 所有数据库。
-# 默认执行 `vacuum analyze`，具体可查阅脚本。autovacuum 的设置请查看 postgresql.conf。
+The port is set up to use autovacuum for new databases, but you might  
+该 Port 被设置为在新数据库中启用了自动清理（autovacuum），但你可能  
+also want to vacuum and perhaps backup your database regularly.  
+也希望定期执行 vacuum 并备份你的数据库。  
+There is a periodic script, /usr/local/etc/periodic/daily/502.pgsql, that  
+系统提供了一个周期性脚本 /usr/local/etc/periodic/daily/502.pgsql，  
+you may find useful. You can use it to backup and perform vacuum on all  
+你可能会觉得有用。你可以用它来备份并对所有  
+databases nightly. Per default, it performs `vacuum analyze'. See the  
+数据库每晚执行 vacuum。默认行为是执行 `vacuum analyze`。请查看  
+script for instructions. For autovacuum settings, please review  
+该脚本获取说明。关于自动清理设置，请查阅  
+~postgres/data/postgresql.conf.  
+~postgres/data/postgresql.conf。  
 
-If you plan to access your PostgreSQL server using ODBC, please
-consider running the SQL script /usr/local/share/postgresql/odbc.sql
-to get the functions required for ODBC compliance.
-# 若你打算通过 ODBC 访问 PostgreSQL，请运行 odbc.sql 脚本以安装所需的兼容函数。
+If you plan to access your PostgreSQL server using ODBC, please  
+如果你打算通过 ODBC 访问你的 PostgreSQL 服务器，请  
+consider running the SQL script /usr/local/share/postgresql/odbc.sql  
+考虑运行 SQL 脚本 /usr/local/share/postgresql/odbc.sql  
+to get the functions required for ODBC compliance.  
+以获得符合 ODBC 标准所需的函数。  
 
-Please note that if you use the rc script,
-/usr/local/etc/rc.d/postgresql, to initialize the database, unicode
-(UTF-8) will be used to store character data by default.  Set
-postgresql_initdb_flags or use login.conf settings described below to
-alter this behaviour. See the start rc script for more info.
-# 如果你用 rc 脚本初始化数据库，会默认使用 UTF-8 编码存储字符数据。
-# 你可以通过设置 postgresql_initdb_flags 或 login.conf 来改变这个行为，详见 rc 脚本说明。
+Please note that if you use the rc script,  
+请注意，如果你使用 rc 脚本，  
+/usr/local/etc/rc.d/postgresql, to initialize the database, unicode  
+/usr/local/etc/rc.d/postgresql 来初始化数据库，Unicode  
+(UTF-8) will be used to store character data by default.  Set  
+（UTF-8）将默认用于存储字符数据。设置  
+postgresql_initdb_flags or use login.conf settings described below to  
+postgresql_initdb_flags，或使用下述 login.conf 设置以  
+alter this behaviour. See the start rc script for more info.  
+改变这一行为。详情请参阅启动脚本。  
 
-To set limits, environment stuff like locale and collation and other
-things, you can set up a class in /etc/login.conf before initializing
-the database. Add something similar to this to /etc/login.conf:
-# 如果你需要设置资源限制、语言环境、排序规则等初始化参数，可以预先在 /etc/login.conf 里定义一个登录类。
-Add something similar to this to /etc/login.conf:
----
-postgres:\
-	:lang=en_US.UTF-8:\
-	:setenv=LC_COLLATE=C:\
-	:tc=default:
----
-# 示例登录类设置，定义了语言和排序规则。
-
-and run `cap_mkdb /etc/login.conf'.
-Then add 'postgresql_login_class="postgres"' to /etc/rc.conf, or
-set it as the postgres user's login class in /etc/passwd.
-# 添加完登录类后运行 cap_mkdb 生效，并在 /etc/rc.conf 设置 postgresql_login_class。
-# 或者直接在 /etc/passwd 中为 postgres 用户指定此登录类。
+To set limits, environment stuff like locale and collation and other  
+为了设置限制、语言环境（locale）、排序规则（collation）及其他  
+things, you can set up a class in /etc/login.conf before initializing  
+内容，你可以在初始化数据库前，在 /etc/login.conf 中设置一个类。  
+the database. Add something similar to this to /etc/login.conf:  
+在 /etc/login.conf 中添加如下类似内容：  
+---  
+postgres:\  
+	:lang=en_US.UTF-8:\  
+	:setenv=LC_COLLATE=C:\  
+	:tc=default:  
+---  
+and run `cap_mkdb /etc/login.conf'.  
+然后运行 `cap_mkdb /etc/login.conf`。  
+Then add 'postgresql_login_class="postgres"' to /etc/rc.conf, or  
+再将 'postgresql_login_class="postgres"' 添加到 /etc/rc.conf，或者  
+set it as the postgres user's login class in /etc/passwd.  
+将其作为 postgres 用户在 /etc/passwd 中的登录类设置。  
 
 ======================================================================
 
-To use PostgreSQL, enable it in rc.conf using
+To use PostgreSQL, enable it in rc.conf using  
+要使用 PostgreSQL，请在 rc.conf 中启用它：  
 
   sysrc postgresql_enable=yes
-# 启用 PostgreSQL 服务。
 
-To initialize the database, run
+To initialize the database, run  
+要初始化数据库，请运行：  
 
   service postgresql initdb
-# 初始化数据库。
 
-You can then start PostgreSQL by running:
+You can then start PostgreSQL by running:  
+你可以通过以下命令启动 PostgreSQL：  
 
   service postgresql start
-# 启动 PostgreSQL 服务。
 
-For postmaster settings, see ~postgres/data/postgresql.conf
-# postmaster 设置在 postgresql.conf 中。
+For postmaster settings, see ~postgres/data/postgresql.conf  
+关于 postmaster 设置，请查阅 ~postgres/data/postgresql.conf  
 
-NB. FreeBSD's PostgreSQL port logs to syslog by default
-    See ~postgres/data/postgresql.conf for more info
-# PostgreSQL 在 FreeBSD 上默认通过 syslog 记录日志，详见 postgresql.conf。
+NB. FreeBSD's PostgreSQL port logs to syslog by default  
+注意：FreeBSD 的 PostgreSQL Port 默认将日志记录到 syslog  
+    See ~postgres/data/postgresql.conf for more info  
+    更多信息请参阅 ~postgres/data/postgresql.conf  
 
-NB. If you're not using a checksumming filesystem like ZFS, you might
-    wish to enable data checksumming. It can be enabled during
-    the initdb phase, by adding the "--data-checksums" flag to
-    the postgresql_initdb_flags rcvar. Otherwise you can enable it later by
-    using pg_checksums.  Check the initdb(1) manpage for more info
-    and make sure you understand the performance implications.
-# 如果你不使用像 ZFS 这样的具备校验和的文件系统，建议开启 PostgreSQL 的数据校验功能。
-# 你可以在 initdb 阶段用 --data-checksums 启用，或之后用 pg_checksums 工具开启。
-# 请参考 initdb 手册并理解它可能带来的性能影响。
-
-======================================================================
-
-SECURITY ADVICE
-# 安全建议
-
-If upgrading from a version 16.x < 16.3
-A security vulnerability was found in the system views pg_stats_ext
-and pg_stats_ext_exprs, potentially allowing authenticated database
-users to see data they shouldn't.  If this is of concern in your
-installation, run the SQL script /usr/local/share/postgresql/fix-CVE-2024-4317.sql
-for each of your databases. For details, see
-https://www.postgresql.org/support/security/CVE-2024-4317/
-# 如果你从 16.3 以下版本升级，pg_stats_ext 和 pg_stats_ext_exprs 有安全漏洞，可能导致认证用户看到不该看的数据。
-# 若你关心此问题，请对每个数据库执行 fix-CVE-2024-4317.sql。
-# 详情见官方公告：https://www.postgresql.org/support/security/CVE-2024-4317/
+NB. If you're not using a checksumming filesystem like ZFS, you might  
+注意：如果你没有使用如 ZFS 一类具备校验和功能的文件系统，你可能  
+    wish to enable data checksumming. It can be enabled during  
+    希望启用数据校验和。它可以在  
+    the initdb phase, by adding the "--data-checksums" flag to  
+    initdb 阶段，通过添加 "--data-checksums" 参数到  
+    the postgresql_initdb_flags rcvar. Otherwise you can enable it later by  
+    postgresql_initdb_flags 变量来启用。否则你也可以之后使用  
+    using pg_checksums.  Check the initdb(1) manpage for more info  
+    pg_checksums 来启用。请查阅 initdb(1) 联机手册获取更多信息  
+    and make sure you understand the performance implications.  
+    并确保你理解它对性能的影响。
 ```
 
 ## 服务管理
@@ -139,39 +145,41 @@ https://www.postgresql.org/support/security/CVE-2024-4317/
 示例输出：
 
 ```sql
-root@ykla:~ # service postgresql initdb
-The files belonging to this database system will be owned by user "postgres".
-This user must also own the server process.
+initdb postgresql
+属于此数据库系统的文件宿主为用户 "postgres".
+此用户也必须为服务器进程的宿主.
 
-The database cluster will be initialized with this locale configuration:
-  provider:    libc
+数据库集簇将以该区域环境配置进行初始化:
+  区域环境支持程序:   libc
   LC_COLLATE:  C
-  LC_CTYPE:    C.UTF-8
-  LC_MESSAGES: C.UTF-8
-  LC_MONETARY: C.UTF-8
-  LC_NUMERIC:  C.UTF-8
-  LC_TIME:     C.UTF-8
-The default text search configuration will be set to "english".
+  LC_CTYPE:    zh_CN.UTF-8
+  LC_MESSAGES: zh_CN.UTF-8
+  LC_MONETARY: zh_CN.UTF-8
+  LC_NUMERIC:  zh_CN.UTF-8
+  LC_TIME:     zh_CN.UTF-8
+initdb: 无法为区域环境 "zh_CN.UTF-8" 找到合适的文本搜索配置
+默认的文本搜索配置将被设为 "simple".
 
-Data page checksums are disabled.
+禁止为数据页生成校验和.
 
-creating directory /var/db/postgres/data16 ... ok
-creating subdirectories ... ok
-selecting dynamic shared memory implementation ... posix
-selecting default max_connections ... 100
-selecting default shared_buffers ... 128MB
-selecting default time zone ... PRC
-creating configuration files ... ok
-running bootstrap script ... ok
-performing post-bootstrap initialization ... ok
-syncing data to disk ... ok
+正在创建目录 /var/db/postgres/data17 ... 成功
+正在创建子目录 ... 成功
+正在选择动态共享内存实现 ... posix
+正在选择默认最大连接数 (max_connections) ... 100
+正在选择默认共享缓冲区 (shared_buffers) ... 128MB
+正在选择默认时区 ... Asia/Shanghai
+正在创建配置文件 ... 成功
+正在运行启动脚本 ... 成功
+正在执行启动脚本后续初始化 ... 成功
+正在同步数据到磁盘 ... 成功
 
-initdb: warning: enabling "trust" authentication for local connections
-initdb: hint: You can change this by editing pg_hba.conf or using the option -A, or --auth-local and --auth-host, the next time you run initdb.
+initdb: 警告: 为本地连接启用 "trust" 身份验证
+initdb: 提示: 你可以通过编辑 pg_hba.conf 或下次运行 initdb 时使用 -A 或者 --auth-local 和 --auth-host 选项进行更改.
 
-Success. You can now start the database server using:
+成功。你现在可以用下面的命令开启数据库服务器:
 
-    /usr/local/bin/pg_ctl -D /var/db/postgres/data16 -l logfile start
+    /usr/local/bin/pg_ctl -D /var/db/postgres/data17 -l logfile start
+
 ```
 
 ## 登录使用
@@ -191,29 +199,31 @@ psql: FATAL:  role "root" does not exist
 #切换用户
 root@ykla:~ # su - postgres
 
-#启动服务
-$ /usr/local/bin/pg_ctl -D /var/db/postgres/data16 -l logfile start
+#启动服务，注意 data 后边的版本你可能和我不同
+$ /usr/local/bin/pg_ctl -D /var/db/postgres/data17 -l logfile start
+等待服务器进程启动 .... 完成
+服务器进程已经启动
 
 #创建新用户 ykla，并设置密码
 $ createuser -sdrP ykla
-Enter password for new role:
-Enter it again:
+为新角色输入的口令:
+再输入一遍:
 $
 #创建数据库
 $ createdb new_db
 #登录进数据库并将数据库权限赋予用户 ykla。
 $ psql
 psql (16.7)
-Type "help" for help.
+输入 "help" 来获取帮助信息.
 
 postgres=# ALTER USER ykla WITH ENCRYPTED PASSWORD 'password';
 ALTER ROLE
 postgres=#
 postgres=# GRANT ALL PRIVILEGES ON DATABASE new_db TO ykla;
 GRANT
-#退出数据库
-postgres=# q
-$exit
+# 退出数据库
+postgres=# \q
+$ exit
 root@ykla:~ #
 ```
 
