--- a/di-19-zhang-database/di-19.1-jie-postgresql.md
+++ b/di-19-zhang-database/di-19.1-jie-postgresql.md
@@ -142,7 +142,7 @@ NB. If you're not using a checksumming filesystem like ZFS, you might
 # service postgresql initdb
 ```
 
-示例输出：
+示例输出（我设置了 i18n，如果你是输出是英文也是正常的）：
 
 ```sql
 initdb postgresql
