--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -1,10 +1,8 @@
 # 第 19.2 节 pgAdmin4
 
-## 安装 pgAdmin4
+本文基于 FreeBSD 14.3-RELEASE。
 
-以下教程基于 FreeBSD 13.0。
-
-pgAdmin4 是用于管理 PostgreSQL 数据库服务器的最流行的开源应用程序。pgAdmin4 提供功能丰富的图形用户界面，轻松管理数据库。它是用 Python 和 Javascript / jQuery 编写的。它可以在多种环境中使用，如 Linux，Windows，Unix，可在桌面和服务器模式下使用。
+pgAdmin4 是一款用于管理 PostgreSQL 数据库服务器的开源软件。pgAdmin4 提供了功能丰富的图形用户界面，轻松管理数据库。它是用 Python 和 Javascript/jQuery 编写的。它支持多种环境（如 Windows、Unix、Linux 等），亦可在桌面和服务器模式下使用。
 
 >**注意**
 >
@@ -17,70 +15,110 @@ pgAdmin4 需要在 python 环境下运行，并且安装时要通过 python 的 
 python: Command not found   # 说明当前未安装 python 环境
 ```
 
-### 安装 Python 及 pip
+>**技巧**
+>
+>你可使用以下命令查看已安装的 Python 版本。
+>
+>```sh
+>$ python3 -V
+>Python 3.11.12
+>```
+
+## 安装 Python 及 pip
+
+- 使用 pkg 安装：
 
 ```sh
-# pkg install python
+# pkg install python devel/py-pip
 ```
 
-pip 是 Python 包的包管理器。它用于安装和管理 Python 包和依赖包的关系。
+- 或者使用 Ports：
 
-virtualenv 用来建立一个虚拟的 python 环境，一个专属于项目的 python 环境。
+```sh
+# cd /usr/ports/lang/python/ && make install clean
+# cd /usr/ports/devel/py-pip/ && make install clean
+```
+
+说明：pip 是 Python 包的包管理器。它用于安装和管理 Python 包和依赖包的关系。
+
+## 安装配置 virtualenv
+
+virtualenv 的功能是用来建立虚拟的 python 环境——一个专属于项目的 python 环境。
 
 本文实际安装过程中是通过 virtualenv 创建独立的 Python 环境来安装 pgAdmin4。
 
-从 py38-pip 包安装 pip：
-
-```sh
-# pkg install py38-pip
-```
-
-### 安装配置 virtualenv
-
 使用 virtualenv 创建独立的 Python 环境。Virtualenv 会创建一个自己的 Python 安装的环境，它不支持具有全局或另一个虚拟环境的库。运行以下命令来安装 Virtualenv。
 
+
+- 使用 pkg 安装：
+
 ```sh
-# pkg install py38-virtualenv #（本次安装 python 版本是 3.8 故使用 py38）
+# pkg install devel/py-virtualenv
+```
+
+- 使用 Ports 安装：
+
+```sh
+# cd /usr/ports/devel/py-virtualenv/ 
+# make install clean
 ```
 
 通过运行以下命令为 pgAdmin4 创建虚拟环境
 
 ```sh
-# virtualenv-3.8 pgadmin4
+# virtualenv pgadmin4
 ```
 
-如果创建完成则有如下显示，在 root 用户的根目录下生成了一个名为 `pgadmin4` 的虚拟环境。
-
-```python
-Using base prefix '/usr/local'
-New python executable in /home/vagrant/pgadmin4/bin/python3.8
-Also creating executable in /home/vagrant/pgadmin4/bin/python
-Installing setuptools, pip, wheel…done.
-done.
-```
-
-### 安装 sqlite3
+如果创建完成则有如下显示：
 
 ```sh
-#pkg install py38-sqlite3
+root@ykla:~ # virtualenv pgadmin4
+created virtual environment CPython3.11.12.final.0-64 in 607ms
+  creator CPython3Posix(dest=/root/pgadmin4, clear=False, no_vcs_ignore=False, global=False)
+  seeder FromAppData(download=False, pip=bundle, setuptools=bundle, via=copy, app_data_dir=/root/.local/share/virtualenv)
+    added seed packages: pip==25.1.1, setuptools==80.3.1
+  activators BashActivator,CShellActivator,FishActivator,NushellActivator,PowerShellActivator,PythonActivator
 ```
 
-激活创建的虚拟环境。
+在 root 用户的根目录下生成了一个名为 `pgadmin4` 的虚拟环境（输出已省略其他文件）：
 
 ```sh
-#source pgadmin4/bin/activate.csh
+# ls 
+pgadmin4
 ```
 
-你会看到 shell 已经变为（pgadmin4）（以下操作均在该 shell 下进行）
+## 安装 sqlite3
 
-实例如下：
+- 使用 pkg 安装：
 
-```python
+```sh
+# pkg install py311-sqlite3
+```
+
+>**技巧**
+>
+>注意版本要和 Port `lang/python` 相同。
+
+- 或者使用 Ports 安装：
+
+```sh
+# cd /usr/ports/databases/py-sqlite3/
+# make install clean
+```
+
+激活创建的虚拟环境（注意有个点）：
+
+```sh
+# . pgadmin4/bin/activate
+```
+
+你会看到 shell 已经变为（pgadmin4）（以下操作均在该 shell 下进行）：
+
+```sh
 (pgadmin4) root@ykla:~ #
-
 ```
 
-### 安装 pgAdmin4
+## 安装 pgAdmin4
 
 现在 pip 源一律要求使用 https，由于缺少 SSL 证书还需要安装。
 
@@ -90,15 +128,28 @@ done.
 
 然后对 pip 进行换源，此处使用清华源：
 
-```python
-pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+```sh
+(pgadmin4) root@ykla:~# pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+Writing to /root/.config/pip/pip.conf
 ```
 
-其中有依赖 openjpeg，先进行安装
+安装依赖：
 
 ```python
-(pgadmin4) root@ykla:~# pkg install openjpeg
+(pgadmin4) root@ykla:~# pkg install openjpeg rust
 ```
+
+然后再安装 pgAmdin4：
+
+```sh
+(pgadmin4) root@ykla:~# pip install pgadmin4
+```
+
+>**注意**
+>
+>如果内存不足（小于 4GB）且没有 swap，会提示 `killed`，如出现该问题请先添加交换空间（swap）。
+
+### 故障排除
 
 如果报错：
 
@@ -114,18 +165,7 @@ ntpdate ntp.api.bz
 17 Dec 16:35:36 ntpdate[1453]: step time server 114.118.7.161 offset +401965.911037 sec
 ```
 
-然后再安装 pgAmdin4 及其依赖环境 rust：
-
-```sh
-(pgadmin4) root@ykla:~# pkg install rust
-(pgadmin4) root@ykla:~# pip install pgadmin4
-```
-
->**注意**
->
->如果内存不足（小于 4GB）且没有 swap，会提示 `killed`，如出现该问题请先添加交换空间（swap）。
-
-### 配置并运行 pgAdmin4
+## 配置并运行 pgAdmin4
 
 安装完成后为 pgAdmin4 创建配置文件，复制 pgAdmin4 配置文件：
 
@@ -222,3 +262,4 @@ root@ykla:~# source pgadmin4/bin/activate.csh
 ```
 
 登录账户和密码还是原来的 (登录后再无更新提示，查看版本已是为最新)。
+
