--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -126,12 +126,9 @@ pgadmin4
 (pgadmin4) root@ykla:~# pkg install ca_root_nss
 ```
 
-然后对 pip 进行换源，此处使用清华源：
-
-```sh
-(pgadmin4) root@ykla:~# pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
-Writing to /root/.config/pip/pip.conf
-```
+>**警告**
+>
+>如果你要换源，请不要使用 TUNA 镜像站（清华大学开源镜像站）的服务，笔者测试会出问题。
 
 安装依赖：
 
