--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -237,13 +237,13 @@ root@ykla:~# source pgadmin4/bin/activate.csh
 pgadmin4 更新频率较高，如需升级要先删除原有用 virtualenv 创建的 pgadmin4 目录然后用安装用户再次执行如下指令：
 
 ```python
-root@ykla:~# virtualenv-3.8 pgadmin4
+root@ykla:~# virtualenv pgadmin4
 ```
 
 虚拟目录创建完成后激活
 
 ```python
-root@ykla:~# source pgadmin4/bin/activate.csh
+root@ykla:~# . pgadmin4/bin/activate
 ```
 
 激活后不要开启服务，直接执行升级
