--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -126,9 +126,12 @@ pgadmin4
 (pgadmin4) root@ykla:~# pkg install ca_root_nss
 ```
 
->**警告**
->
->如果你要换源，请不要使用 TUNA 镜像站（清华大学开源镜像站）的服务，笔者测试会出问题。
+由于网络问题，此处对 pip 进行换源，此处使用 TUNA 清华源：
+
+```sh
+(pgadmin4) root@ykla:~# pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+Writing to /root/.config/pip/pip.conf
+```
 
 安装依赖：
 
@@ -260,3 +263,6 @@ root@ykla:~# . pgadmin4/bin/activate
 
 登录账户和密码还是原来的 (登录后再无更新提示，查看版本已是为最新)。
 
+## 参考文献
+
+- [PostgreSQL WIKI FreeBSD]([https://docs.vultr.com/install-pgadmin-4-for-postgresql-on-freebsd-12-2](https://wiki.freebsd.org/PostgreSQL/Setup))
