--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -1,5 +1,9 @@
 # 第 19.2 节 pgAdmin4
 
+>**警告**
+>
+>由于 [Bug 7836](https://github.com/pgadmin-org/pgadmin4/issues/7836)、[Bug 8869](https://github.com/pgadmin-org/pgadmin4/issues/8869) pgAdmin4 目前无法通过 pip 安装，本文暂时无效。
+
 本文基于 FreeBSD 14.3-RELEASE。
 
 pgAdmin4 是一款用于管理 PostgreSQL 数据库服务器的开源软件。pgAdmin4 提供了功能丰富的图形用户界面，轻松管理数据库。它是用 Python 和 Javascript/jQuery 编写的。它支持多种环境（如 Windows、Unix、Linux 等），亦可在桌面和服务器模式下使用。
