--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -2,7 +2,7 @@
 
 >**警告**
 >
->由于 [Bug 7836](https://github.com/pgadmin-org/pgadmin4/issues/7836)、[Bug 8869](https://github.com/pgadmin-org/pgadmin4/issues/8869) pgAdmin4 目前无法通过 pip 安装，本文暂时无效。
+>请注意 [Bug 7836](https://github.com/pgadmin-org/pgadmin4/issues/7836)、[Bug 8869](https://github.com/pgadmin-org/pgadmin4/issues/8869)。
 
 本文基于 FreeBSD 14.3-RELEASE。
 
@@ -146,7 +146,7 @@ Writing to /root/.config/pip/pip.conf
 然后再安装 pgAmdin4：
 
 ```sh
-(pgadmin4) root@ykla:~# pip install pgadmin4
+(pgadmin4) root@ykla:~# pip install pgadmin4==9.4
 ```
 
 >**注意**
@@ -171,31 +171,30 @@ ntpdate ntp.api.bz
 
 ## 配置并运行 pgAdmin4
 
-安装完成后为 pgAdmin4 创建配置文件，复制 pgAdmin4 配置文件：
+安装完成后为 pgAdmin4 创建配置文件，复制 pgAdmin4 配置文件（注意 Python 版本）：
 
 ```python
-(pgadmin4) root@ykla:~# cp ./pgadmin4/lib/python3.8/site-packages/pgadmin4/config.py  ./pgadmin4/lib/python3.8/site-packages/pgadmin4/config_local.py
+(pgadmin4) root@ykla:~# touch  ./pgadmin4/lib/python3.11/site-packages/pgadmin4/config_local.py
 ```
 
-使用 ee 编辑器编辑配置文件的本地副本。
+>**警告**
+>
+>请不要直接把 `./pgadmin4/lib/python3.11/site-packages/pgadmin4/config.py` 复制为 `./pgadmin4/lib/python3.11/site-packages/pgadmin4/config_local.py`，这样再怎样改动也是无效的，请直接创建空文件。
 
-```sh
-(pgadmin4) root@ykla:~# ee ./pgadmin4/lib/python3.8/site-packages/pgadmin4/config_local.py
-```
-
-找到 `DEFAULT_SERVER` 将默认服务器侦听地址更改为 `0.0.0.0`。找到 `DEFAULT_SERVER_PORT` 可改应用程序监听的端口。
-
-实例如下：
+编辑配置 `./pgadmin4/lib/python3.11/site-packages/pgadmin4/config_local.py`。实例如下：
 
 ```sh
 DEFAULT_SERVER = '0.0.0.0'
 DEFAULT_SERVER_PORT = 5050
 ```
 
+- `DEFAULT_SERVER` 默认服务器侦听地址更改为 `0.0.0.0`。
+- `DEFAULT_SERVER_PORT` 可改应用程序监听的端口。
+
 手动创建软件目录：
 
 ```sh
-(pgadmin4) root@ykla:~# mkdir  -p /var/lib/pgadmin
+(pgadmin4) root@ykla:~# mkdir -p /var/lib/pgadmin
 (pgadmin4) root@ykla:~# mkdir /var/log/pgadmin
 ```
 
@@ -211,9 +210,14 @@ DEFAULT_SERVER_PORT = 5050
 NOTE: Configuring authentication for SERVER mode.
 Enter the email address and password to use for the initial pgAdmin user account:
 Email address: your_email		# 输入你的邮件地址
-Password: your_new_password		# 输入你的登录密码
+Password: your_new_password		# 输入你的登录密码，最少 6 位数；同样不会打印密码，也不会是 ***
 Retype password:				# 再次输入密码
+pgAdmin 4 - Application Initialisation
+======================================
+
 Starting pgAdmin 4. Please navigate to http://0.0.0.0:5050 in your browser.
+ * Serving Flask app 'pgadmin'
+ * Debug mode: off
 ```
 
 现在我们已经安装并运行了 pgAdmin4，并可以通过 `http://ip:5050` 访问 Web 控制面板：
@@ -229,7 +233,7 @@ Starting pgAdmin 4. Please navigate to http://0.0.0.0:5050 in your browser.
 如果服务关闭下次要运行时需使用 pgadmin4 的安装用户（此处是 `root`）进入根目录，执行如下命令：
 
 ```sh
-root@ykla:~# source pgadmin4/bin/activate.csh
+root@ykla:~# . pgadmin4/bin/activate
 (pgadmin4) root@ykla:~# pgadmin4 &
 ```
 
@@ -269,4 +273,4 @@ root@ykla:~# . pgadmin4/bin/activate
 
 ## 参考文献
 
-- [PostgreSQL WIKI FreeBSD]([https://docs.vultr.com/install-pgadmin-4-for-postgresql-on-freebsd-12-2](https://wiki.freebsd.org/PostgreSQL/Setup))
+- [PostgreSQL WIKI FreeBSD](https://wiki.freebsd.org/PostgreSQL/Setup)
