--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -224,6 +224,8 @@ Starting pgAdmin 4. Please navigate to http://0.0.0.0:5050 in your browser.
 
 ![](../.gitbook/assets/pglogin.png)
 
+箭头所指方向可以切换语言。
+
 ![](../.gitbook/assets/pglogin2.png)
 
 ![](../.gitbook/assets/pglogin3.png)
