--- a/di-19-zhang-database/di-19.2-pgadmin4.md
+++ b/di-19-zhang-database/di-19.2-pgadmin4.md
@@ -143,7 +143,7 @@ Writing to /root/.config/pip/pip.conf
 (pgadmin4) root@ykla:~# pkg install openjpeg rust
 ```
 
-然后再安装 pgAmdin4：
+然后再安装 pgAdmin4：
 
 ```sh
 (pgadmin4) root@ykla:~# pip install pgadmin4==9.4
