更新 PostgreSQL 相关 (#817)

--- a/di-17-zhang-wang-luo-fu-wu-qi/17.8.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.8.prometheus.md
@@ -1,8 +1,8 @@
-# 第 17.8 节 prometheus 监控部署
+# 第 17.8 节 Prometheus 监控部署
 
 ## 框架
 
-![框架](../.gitbook/assets/mermaid.png)
+![框架](../.gitbook/assets/prometheus.svg)
 
 prometheus 监控部署如图
 
