--- a/di-21-zhang-linux-jian-rong-ceng/di-21.5-jie-linux-jian-rong-ceng-ji-yu-archlinuxpacman.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.5-jie-linux-jian-rong-ceng-ji-yu-archlinuxpacman.md
@@ -73,7 +73,7 @@ Server = https://mirrors.ustc.edu.cn/archlinux/$repo/os/x86_64
 
 你可以把上面涉及到的所有绑定操作放到 FreeBSD 层的 `/etc/fstab` 中去，编辑 `/etc/fstab`，加入：
 
-```sh
+```ini
 /etc/resolv.conf  /compat/archlinux/etc/resolv.conf  nullfs  ro  0  0
 /etc/passwd       /compat/archlinux/etc/passwd       nullfs  ro  0  0
 /etc/group        /compat/archlinux/etc/group        nullfs  ro  0  0
