--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
@@ -2,28 +2,59 @@
 
 ## Python
 
-在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.11 和 Python3.13 属于不同的包。就如同 `llvm11` 和 `llvm13` 那样。
+在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.11 和 Python3.13 属于不同的包，如 Port `lang/python310`、`lang/python311`、`lang/python312`。
 
-但是，就目前的 FreeBSD 14 来说，支持最完整的 Python 是 Python 3.11。`pip` 与 `numpy` 之类的工具只有针对 `py311` 的打包。这也就是 `python3` 这个虚包指向的是 `python311` 的原因。否则你只能使用 ports。
+在不同时间节点，FreeBSD 的 Ports 对于不同版本的 Python，其 pkg 包管理器构建的二进制包的支持力度也是不同的。比如在当下，`lang/python`（他实际上只是一个元包，即指向其他软件）可能指向的是 Python 3.11，那么自然其他的，你使用 pkg 安装的其他 Python 包（如 Python-XX）在默认情况下也是基于此版本构建的——包括其他依赖依赖 Python 的软件，他们依赖的 Python 版本也是 `lang/python` 这个元包所代表的那个 Python 版本而最新版本的 Python 版本在 FreeBSD 上可能没有那么完全（可能没有，或者可能需要通过 Ports 构建）。
 
-所以想要安装 Python，你需要这样做。
+>**技巧**
+>
+>这类似于 Gentoo Linux 中的 Python USE。只要你指定了 Python 版本，那么所有基于 Python 的软件，其使用的 Python 版本就是你所选的这个。
+
+所以想要安装 Python，我们建议你这样做：
 
 - 使用 pkg 安装：
 
 ```sh
-# pkg install python311 py311-pip
+# pkg install python devel/py-pip
 ```
 
 - 当然你也可以通过 Ports 安装：
 
 ```sh
-# cd /usr/ports/lang/python311/ && make install clean
+# cd /usr/ports/lang/python/ && make install clean
 # cd /usr/ports/devel/py-pip/ && make install clean
 ```
 
-之类的命令来要求一个更新的 Python 版本。但是请记住，最新版本的 Python 版本在 FreeBSD 上可能没有那么完全（需要使用 ports）。
+如果你要安装特定版本的 Python，推荐你一律使用 USE 全局指定 Python 的版本。
 
-然而不管怎么说，这总好过某些 Linux 发行版，从来只维护一个 Python 版本，也不管这么做的后果是什么。
+### 如何指定 Ports 编译的 Python 版本？
+
+>**注意**
+>
+>实际上，归根结底 `lang/python` 指向的版本是由 USE 控制的。
+
+假设 Python 现在默认的编译版本是 3.11，要改为 3.13：
+
+```sh
+# echo "DEFAULT_VERSIONS+= python=3.13  python3=3.13" >> /etc/make.conf
+```
+
+>**技巧**
+>
+>如果只设置了单个参数，那么出现警告是正常的，见 [Bug 243034 - Mk/Uses/python.mk: WARNING when python version is set to non-default version in make.conf](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=243034)
+>
+>```sh
+>/!\ WARNING /!\
+>
+>PYTHON_DEFAULT must be a version present in PYTHON2_DEFAULT or PYTHON3_DEFAULT,
+>if you want more Python flavors, set BUILD_ALL_PYTHON_FLAVORS in your make.conf
+>```
+
+
+### 参考资料
+
+- [Ports/DEFAULT_VERSIONS](https://wiki.freebsd.org/Ports/DEFAULT_VERSIONS)
+- [Python](https://wiki.freebsd.org/Python)
 
 ## VS Code
 
@@ -40,10 +71,6 @@
 # make install clean
 ```
 
----
+需要注意的是，以这种方式获取到的 VS Code 其实是 [Code - OSS](https://github.com/microsoft/vscode)。Code - OSS 和 VS Code 的区别主要是许可证不一样和可用的闭源资源不一样，类似 Chromium 和 Chrome 的关系。有兴趣的人可以自己[阅读原文](https://github.com/microsoft/vscode/wiki/Differences-between-the-repository-and-Visual-Studio-Code)。
 
-需要注意的是，通过这种方式获取到的 VS Code 其实是 [Code - OSS](https://github.com/microsoft/vscode)。Code - OSS 和 VS Code 的区别主要是许可证不一样和可用的闭源资源不一样，类似 Chromium 和 Chrome 的关系。有兴趣的人可以自己[阅读原文](https://github.com/microsoft/vscode/wiki/Differences-between-the-repository-and-Visual-Studio-Code)。
-
-这里只想提一下，目前已知微软的 Python 插件，以及 LLVM 的 clangd 插件都能直接在 Code - OSS 运行，使用起来和 VS Code 没有任何区别。
-
-设置同步服务看起来是不能用的。
+这里只想提一下，目前已知微软的 Python 插件，以及 LLVM 的 clangd 插件都能直接在 Code - OSS 运行，使用起来设置同步服务暂无法使用。
