--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
@@ -4,7 +4,7 @@
 
 在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.11 和 Python3.13 属于不同的包，如 Port `lang/python310`、`lang/python311`、`lang/python312`。
 
-在不同时间节点，FreeBSD 的 Ports 对于不同版本的 Python，其 pkg 包管理器构建的二进制包的支持力度也是不同的。比如在当下，`lang/python`（他实际上只是一个元包，即指向其他软件）可能指向的是 Python 3.11，那么自然其他的，你使用 pkg 安装的其他 Python 包（如 Python-XX）在默认情况下也是基于此版本构建的——包括其他依赖依赖 Python 的软件，他们依赖的 Python 版本如此。而最新版本的 Python 版本在 FreeBSD 上可能没有那么完全（可能没有，或者可能需要通过 Ports 构建）。
+在不同时间节点，FreeBSD 的 Ports 对于不同版本的 Python，其 pkg 包管理器构建的二进制包的支持力度也是不同的。比如在当下，`lang/python`（他实际上只是一个元包，即指向其他软件）可能指向的是 Python 3.11，那么自然其他的，你使用 pkg 安装的其他 Python 包（如 Python-XX）在默认情况下也是基于此版本构建的——包括其他依赖依赖 Python 的软件，他们依赖的 Python 版本亦如此。而那些基于最新的 Python 版本构建的 Python 包或软件，在 FreeBSD 上的支持力度可能没有那么完全（可能需要通过 Ports 构建或者直接没有）。
 
 >**技巧**
 >
