--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -1,22 +1,8 @@
 # 14.2 无线网络
 
-
 >**技巧**
 >
->类似 plasma-nm/networkmanager 的图形化网络配置工具。
->
->- 使用 pkg 安装：
->
->```sh
->pkg install net-mgmt/networkmgr
->```
->
->- 或者使用 Ports 安装：
->
->```sh
-># cd /usr/ports/net-mgmt/networkmgr/ 
-># make install clean
->```
+>如果在更新系统版本后失去无线网络，请使用命令 `fwegt` 重新获取固件。如果没有网络连接，可手动到 <https://mirrors.ustc.edu.cn/freebsd-pkg/FreeBSD%3A14%3Aamd64/kmods_latest_3/All/> 等位置下载所需固件；或者使用 USB 网络共享。安装命令形如 `# pkg add /home/ykla/wifi-firmware-iwlwifi-kmod-20241017.1403000_2.pkg`。
 
 ## 一般无线网卡驱动方式（基于 COMFAST CF-912AC 1200M 802.11AC）
 
@@ -340,3 +326,19 @@ htcaps=207002d<LDPC,SHORTGI20>
 
 ![](../.gitbook/assets/wifi1.png)
 
+## 附录：图形化网络配置工具
+
+类似于 Linux 的 plasma-nm/networkmanager：
+
+- 使用 pkg 安装：
+
+```sh
+pkg install net-mgmt/networkmgr
+```
+
+- 或者使用 Ports 安装：
+
+```sh
+# cd /usr/ports/net-mgmt/networkmgr/ 
+# make install clean
+```
