Update QQ installation guide and related assets
Rewrote the QQ (Linux version) installation section for improved clarity and updated compatibility layer instructions. Replaced and added new screenshots for the QQ installation process, updated download URLs for Arch Linux bootstrap, and clarified environment variable requirements and troubleshooting steps.

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
@@ -33,7 +33,7 @@
 
 ```sh
 # mkdir -p /compat
-# fetch https://mirrors.qlu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst
+# fetch https://ftp.sjtu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst
 # tar --use-compress-program=unzstd -xpvf archlinux-bootstrap-x86_64.tar.zst -C /compat --numeric-owner # 若有报错 tar: Error exit delayed from previous errors. 请无视之。-
 # mv /compat/root.x86_64 /compat/arch # 重命名 /
 ```
@@ -162,7 +162,7 @@ Server = https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch
 #/bin/sh
 
 rootdir=/compat/arch
-url="https://mirrors.qlu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst"
+url="https://ftp.sjtu.edu.cn/archlinux/iso/latest/archlinux-bootstrap-x86_64.tar.zst"
 
 echo "begin to install archlinux ..."
 echo "check modules ..."
