--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -92,10 +92,11 @@ deb-src http://mirrors.ustc.edu.cn/ubuntu/ jammy-backports main restricted unive
 ```sh
 # LANG=C #设定字符集，防止错误
 # apt update && apt upgrade && apt install nano wget fonts-wqy-microhei  fonts-wqy-zenhei language-pack-zh-hans # 此时已经位于 Ubuntu 兼容层了。
+# update-locale LC_ALL=zh_CN.UTF-8 LANG=zh_CN.UTF-8 # 设置中文字符集
 ```
 
 
-## 附录：Ubuntu 兼容层脚本（基于 Ubuntu 22.04 LTS，FreeBSD 14.2 RELEASE 测试通过）
+## 附录：Ubuntu 兼容层脚本（基于 Ubuntu 22.04 LTS，FreeBSD 14.3 RELEASE 测试通过）
 
 
 脚本内容如下：
@@ -215,8 +216,9 @@ echo "deb-src http://mirrors.ustc.edu.cn/ubuntu/ jammy-updates main restricted u
 echo "deb http://mirrors.ustc.edu.cn/ubuntu/ jammy-backports main restricted universe multiverse" >> /compat/ubuntu/etc/apt/sources.list
 echo "deb-src http://mirrors.ustc.edu.cn/ubuntu/ jammy-backports main restricted universe multiverse" >> /compat/ubuntu/etc/apt/sources.list
 
-echo "remove rsyslog and install nano fonts-wqy-microhei  fonts-wqy-zenhei language-pack-zh-hans and wget"
-chroot ${rootdir} /bin/bash -c "apt remove rsyslog && apt update && apt upgrade && apt install nano wget fonts-wqy-microhei  fonts-wqy-zenhei language-pack-zh-hans"
+echo "remove rsyslog and install nano fonts-wqy-microhei fonts-wqy-zenhei language-pack-zh-hans and wget"
+chroot ${rootdir} /bin/bash -c "apt remove rsyslog && apt update && apt upgrade && apt install nano wget fonts-wqy-microhei fonts-wqy-zenhei language-pack-zh-hans"
+chroot ${rootdir} /bin/bash -c "update-locale LC_ALL=zh_CN.UTF-8 LANG=zh_CN.UTF-8"
 echo "Now you can run '#chroot /compat/ubuntu/ /bin/bash' Into Ubuntu 22.04 LTS"
 ```
 
@@ -354,8 +356,9 @@ echo "deb http://mirrors.ustc.edu.cn/debian-security/ stable-security main non-f
 echo "# deb-src http://mirrors.ustc.edu.cn/debian-security/ stable-security main non-free contrib" >> /compat/debian/etc/apt/sources.list
 
 
-echo "install nano fonts-wqy-microhei  fonts-wqy-zenhei and wget"
+echo "install nano fonts-wqy-microhei fonts-wqy-zenhei and wget"
 chroot ${rootdir} /bin/bash -c " apt update && apt --fix-broken install -y && apt upgrade && apt install nano wget fonts-wqy-microhei  fonts-wqy-zenhei -y"
+chroot ${rootdir} /bin/bash -c "update-locale LC_ALL=zh_CN.UTF-8 LANG=zh_CN.UTF-8"
 echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian 12 bookworm"
 ```
 
