--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -23,30 +23,37 @@ $ rm openlist-freebsd-amd64.tar.gz
 ### 编译安装（可选）
 
 
-安装依赖：
+#### 安装依赖
+
+- 使用 pkg 安装
 
 ```sh
 # pkg install git go
 ```
 
-或者
+- 或者使用 Ports 安装
 
 ```sh
 # cd /usr/ports/devel/git/ && make install clean
 # cd /usr/ports/lang/go/ && make install clean
 ```
 
-然后：
+#### 编译构建
+
+请以普通用户执行：
+
+- 下载源码
 
 ```sh
 $ git clone -b v4.0.8 https://github.com/OpenListTeam/OpenList # 写作本文时，最新版本为 v4.0.8
 $ cd OpenList/public
-$ fetch https://github.com/OpenListTeam/OpenList-Frontend/releases/download/v4.0.8/openlist-frontend-dist-v4.0.8.tar.gz   # 这是前端部分，官方已经编译好的，注意和后端版本相对应
-$ tar openlist-frontend-dist-v4.0.8.tar.gz  # 解压缩
+$ fetch https://github.com/OpenListTeam/OpenList-Frontend/releases/download/v4.0.8/openlist-frontend-dist-v4.0.8.tar.gz  # 这是前端部分，官方已经编译好的，注意要和后端版本相对应，即也是 v4.0.8
+$ tar zxvf openlist-frontend-dist-v4.0.8.tar.gz  # 解压缩
 $ rm openlist-frontend-dist-v4.0.8.tar.gz # 清理垃圾
 $ cd ..
 ```
 
+- 开始构建
 
 ```bash
 $ mkdir build
@@ -55,7 +62,6 @@ $ go build -ldflags="-w -s" -tags=jsoniter ..
 ```
 
 编译后的文件即在 `build` 下。
-
 
 ## 部署 rc 服务
 
