--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -160,3 +160,9 @@ Comment=Custom definition for vlc
 $ update-desktop-database ~/.local/share/applications
 $ xdg-mime default userapp-vlc.desktop x-scheme-handler/vlc
 ```
+
+## 故障排除与未竟事宜
+
+### 日志
+
+OpenList 的日志在 `OpenList/daemon/start.log`。
