--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -4,6 +4,8 @@
 
 ## 安装
 
+### 官方二进制包
+
 请以普通用户执行：
 
 ```sh
@@ -17,6 +19,49 @@ $ rm openlist-freebsd-amd64.tar.gz
 >**注意**
 >
 >根据 [手动安装](https://docs.oplist.org/zh/guide/install/manual.html) 所述及实际测试，无需额外配置后端 OpenList-Frontend。
+
+### 编译安装（可选）
+
+
+#### 安装依赖
+
+- 使用 pkg 安装
+
+```sh
+# pkg install git go
+```
+
+- 或者使用 Ports 安装
+
+```sh
+# cd /usr/ports/devel/git/ && make install clean
+# cd /usr/ports/lang/go/ && make install clean
+```
+
+#### 编译构建
+
+请以普通用户执行：
+
+- 下载源码
+
+```sh
+$ git clone -b v4.0.8 https://github.com/OpenListTeam/OpenList # 写作本文时，最新版本为 v4.0.8
+$ cd OpenList/public/dist
+$ fetch https://github.com/OpenListTeam/OpenList-Frontend/releases/download/v4.0.8/openlist-frontend-dist-v4.0.8.tar.gz  # 这是前端部分，官方已经编译好的，注意要和后端版本相对应，即也是 v4.0.8
+$ tar zxvf openlist-frontend-dist-v4.0.8.tar.gz  # 解压缩
+$ rm openlist-frontend-dist-v4.0.8.tar.gz # 清理垃圾
+$ cd ../..
+```
+
+- 开始构建
+
+```bash
+$ mkdir build
+$ cd build
+$ go build -ldflags="-w -s" -tags=jsoniter ..
+```
+ 
+编译后的文件即在 `build` 下。如果要移动目录，记得一并移动 `public`，否则会报错找不到 openlist-frontend。
 
 
 ## 编写 RC 脚本
