--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -61,7 +61,7 @@ $ cd build
 $ go build -ldflags="-w -s" -tags=jsoniter ..
 ```
  
-编译后的文件即在 `build` 下。如果要移动目录，记得一并移动 `public`，否则会报错找不到 openlist-frontend。
+编译后的文件即在 `build` 下。叫 `OpenList`，为了方便使用，在以下教程中笔者将其重命名为 `openlist`。
 
 
 ## 编写 RC 脚本
