--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -210,4 +210,4 @@ $ xdg-mime default userapp-vlc.desktop x-scheme-handler/vlc
 
 ### 日志
 
-OpenList 的日志在 `OpenList/daemon/start.log`。
+OpenList 的日志在 `daemon/start.log`。
