--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-alist.md
@@ -154,20 +154,7 @@ INFO[2025-07-06 11:39:39] password: 1
 
 ## 指定 vlc 为 OpenList 的外部播放器
 
-OpenList 中的内嵌播放器有时不能播放某些视频，但 OpenList 可以通过 URI 调用外部程序（通过 `xdg-open` )。OpenList 为 vlc 指定的视频地址形如 `vlc://http://xxx`，只要为 `vlc://` 开头的 URI 指定 vlc 程序即可。
-
-安装 vlc：
-
-```sh
-# pkg install vlc
-```
-
-或者：
-
-```sh
-# cd /usr/ports/multimedia/vlc/ 
-# make install clean
-```
+OpenList 中的内嵌播放器有时不能播放某些视频，但 OpenList 可以通过 URI 调用外部程序（通过 `xdg-open` )。OpenList 为 vlc 指定的视频地址形如 `vlc://http://xxx`，只要为 `vlc://` 开头的 URI 指定 vlc 程序即可。请自行安装 vlc。
 
 `xdg-open` 向 vlc 传递 URI 时会包含 `vlc://` , vlc 不能打开这样的地址，需要在打开视频地址前先去除，然后调用 vlc，下面是要调用的脚本：
 
